Convert command-line arguments from native encoding to Unicode. Bug 208363, r+sr=neil